--- a/frontend/src/pages/About/about.css
+++ b/frontend/src/pages/About/about.css
@@ -9,16 +9,16 @@
     padding: 0 20px;
 }
 
-h2 {
+.about-container h2 {
     text-align: center;
     margin-bottom: 30px;
 }
 
-p {
+.about-container p{
     margin-bottom: 20px;
 }
 
-.btn {
+.about-container .btn {
     display: inline-block;
     padding: 10px 20px;
     background-color: #4CAF50;
