--- a/frontend/src/pages/Contact/contact.css
+++ b/frontend/src/pages/Contact/contact.css
@@ -19,14 +19,13 @@ h2 {
   text-align: left;
 }
 
-label {
+.form-group label {
   display: block;
   font-size: 18px;
   margin-bottom: 5px;
 }
 
-input,
-textarea {
+.form-group textarea {
   width: 50%;
   padding: 10px;
   font-size: 16px;
