--- a/frontend/src/pages/Student Profile/studentprofile.css
+++ b/frontend/src/pages/Student Profile/studentprofile.css
@@ -14,7 +14,7 @@
     margin-right: 20px;
 }
 
-form {
+.studentprofile-container form {
     display: flex;
     flex-flow: wrap;
     justify-content: end;
@@ -38,7 +38,7 @@ h3 {
     margin-bottom: 15px;
 }
 
-p {
+.form-group p {
     display: inline-block;
     width: 260px;
     font-weight: bold;
