--- a/frontend/src/pages/Signup/signup.css
+++ b/frontend/src/pages/Signup/signup.css
@@ -1,11 +1,12 @@
 .signup-container {
     font-family: Arial, sans-serif;
     /* background: radial-gradient(circle, #ca4c4e, #80ecff); */
+    padding-top: 100px;
 }
 
 .signup-container form {
     max-width: 400px;
-    margin: 50px auto;
+    margin: auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
