--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -21,7 +21,7 @@
     margin-bottom: 20px;
   }
 
-  .login-container label[for="uname"],
+  .login-container label[for="email"],
   .login-container label[for="password"] {
     margin-right: 77%;
     padding: 5px 0;
