--- a/frontend/src/pages/AdminRecord/adminRecord.css
+++ b/frontend/src/pages/AdminRecord/adminRecord.css
@@ -1,3 +1,7 @@
+.admin-container {
+    padding: 0px 100px;
+}
+
 .student-table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -13,7 +17,7 @@ td, th {
     display: flex;   
 }
 .counselor-table {
-    width: 30%;
+    width: 100%;
     margin-right: 10px;
 }
 
