--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -1,8 +1,8 @@
 .home-container {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 20px;
-    background: rgb(240, 244, 247);
+    padding: 50px 20px;
+    /* background: rgb(240, 244, 247); */
   }
   
   header {
